<?xml version="1.0"?>
<package>
  <name>transform_conversions</name>
  <version>0.0.0</version>
  <description>The transform_conversions package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jaymwong@todo.todo">jaymwong</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
