<?xml version="1.0"?>
<package format="2">
  <name>transform_conversions</name>
  <version>0.0.0</version>
  <description>The transform_conversions package</description>

  <maintainer email="jmwong@csail.mit.edu">Jay M. Wong</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>message_generation</depend>
  <export>

  </export>
</package>
